# xontrib-psub

./: LICENSE.mit  README.md  pyproject.toml
.github/workflows/: release.yml
xontrib/: psub.py
