[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "xontrib-psub"
version = "0.1.0"
description = "fish style process substitution for xonsh"
readme = "README.md"
license = { file = "LICENSE.mit" }
requires-python = ">=3.8"
authors = [ { name = "mingmingrr", email = "mingmingrr@gmail.com" } ]
dependencies = [
	"xonsh",
]
classifiers = [
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
	"Programming Language :: Python :: 3",
	"Topic :: System :: Shells",
	"Topic :: System :: System Shells",
	"Topic :: Terminals",
]

[project.urls]
Homepage = "https://github.com/mingmingrr/xontrib-psub"
Documentation = "https://github.com/mingmingrr/xontrib-psub/blob/master/README.md"
Code = "https://github.com/mingmingrr/xontrib-psub"
"Issue tracker" = "https://github.com/mingmingrr/xontrib-psub/issues"

